# spectre-mcp

./: .gitignore  README.md  SPECTRE.md  pyproject.toml
src/spectre/: __init__.py  cli.py  models.py  scraper.py  server.py  writer.py
