[project]
name = "spectre-mcp"
version = "1.0.1"
description = "104 tools for X/Twitter automation — direct GraphQL/REST API, no browser, no API keys, free."
readme = "README.md"
homepage = "https://github.com/pranrichh/spectre-mcp"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Pranjal Richhariya" },
]
keywords = ["mcp", "twitter", "x", "automation", "scraper", "social-media", "agent", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "curl-cffi>=0.15.0",
    "fastmcp>=3.4.2",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "twscrape>=0.19.0",
]

[project.scripts]
spectre = "spectre.cli:main"
spectre-mcp = "spectre.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectre"]
